--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - name: Set Python
+        uses: actions/setup-python@v2
         with:
           python-version: 3.7
           
