--- a/.github/workflows/mstdn_be_quote_bot.yml
+++ b/.github/workflows/mstdn_be_quote_bot.yml
@@ -1,4 +1,4 @@
-name: mastodon-civ-quote-bot
+name: mastodon-be-quote-bot
 
 on:
   schedule:
@@ -26,3 +26,4 @@ jobs:
         env:
           MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
           MASTODON_BASE_URL: mastodon.social
+          CIV_VERSION: be
