--- a/.github/workflows/mstdn_civ5_quote_bot.yml
+++ b/.github/workflows/mstdn_civ5_quote_bot.yml
@@ -24,6 +24,6 @@ jobs:
         run: |
           python civbot.py
         env:
-          MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+          MASTODON_ACCESS_TOKEN: ${{ secrets.CIV5_QUOTE_BOT_ACCESS_TOKEN }}
           MASTODON_BASE_URL: mastodon.social
           CIV_VERSION: civ5
